[package]
name = "louds"
version = "0.1.0"
authors = ["Koki Kato <koki.kato1994@gmail.com>"]
description = "LOUDS implementation for Rust"
repository = "https://github.com/ajalab/louds"
readme = "README.md"
homepage = "https://github.com/ajalab/louds"
documentation = "https://docs.rs/louds"
license = "MIT"
keywords = ["LOUDS", "tree", "succinct", "trie"]
categories = ["data-structures"]

[dependencies]
fid = "0.1.2"

[dev-dependencies]
rand = "0.5"
